<resources>
    <string name="app_name">QuranApplication</string>
    <string name="Daily_doaa">Daily doaa</string>

    <!--  VoiceSearch -->
    <string name="input_hint">enter text</string>
    <string name="target_language">Target Language</string>
    <string name="english">english</string>
    <string name="Arabic">Arabic</string>
    <string name="microphone">Microphone</string>
    <string name="play">Play</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="The_Duha">The Duha</string>
    <string name="Duha1">The Duha prayer is the voluntary Islamic prayer between the obligatory Islamic prayers of Fajr and Dhuhr.</string>
    <string name="Duha2">The Duha prayer is the voluntary Islamic prayer between the obligatory Islamic prayers of Fajr and Dhuhr.</string>
    <string name="Qiyam_ul_layl">Qiyam-ul-layl</string>
    <string name="Qiyam1">Qiyam-ul-layl is a voluntary prayer which is offered between the time of Ishaa prayer and the Fajr prayer .</string>
    <string name="Qiyam2">Invoking Allah at the time of tahajjud was the sunnah of many prophets.Invoking Allah at the time of tahajjud was the sunnah of many prophets.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_read">Go To Last Read</string>
    <string name="book_mark">Book Mark</string>
    <string name="share_app">Share App</string>
    <string name="about_app">About App</string>
    <string name="language">Language</string>
    <string name="search">Search</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="Daily_sonan">Daily Sonan</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="theme_preferences_key">theme_preferences_key</string>

    <string name="dark_theme_preference_value">Dark</string>
    <string name="light_theme_preference_value">Light</string>
    <string name="system_theme_preference_value">Follow System</string>

    <string name="dark_theme_description">Dark mode</string>
    <string name="light_theme_description">Light mode</string>
    <string name="system_theme_description">System default</string>

</resources>
