<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/go_to_last"
        android:actionLayout="@layout/fragment_last_read"
        android:title="@string/last_read"
        app:showAsAction="never" />
    <item
        android:id="@+id/book_mark"
        android:title="@string/book_mark"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share_app"
        android:title="@string/share_app"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about_app"
        android:title="@string/about_app"
        app:showAsAction="never"/>


    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"/>






</menu>